# sansaisummit24

./: .gitignore  LICENSE  README.md
cluster-commands-rs/: Cargo.toml  README.md
cluster-commands-rs/src/: cluster.rs  embedding.rs  errors.rs  evtx.rs  filter.rs  lib.rs  transformer.rs
cluster-commands-rs/tests/: scale-pca.rs  test_embeddings.rs  test_filter.rs  test_transformer.rs
notebook/: clustering-py.ipynb  helpers.py  requirements.txt
