[package]
name = "evtx_clustering"
version = "0.1.0"
edition = "2021"

[dependencies]
openai-api-rs = "*"
linfa = "*"
linfa-clustering = "*"
ndarray = "0.15.6"
evtx = "0.8.2"
log = "0.4.22"
fern = "0.6.2"
chrono = "0.4.38"
walkdir = "2.5.0"
serde_json = "1.0.121"
jmespath = "0.3.0"
sled = "0.34.7"
blake3 = "1.5.3"

[dependencies.polars]
version = "0.41.3"
features = ["json"]

[dependencies.clap]
version = "4.5.11"
features = ["derive"]

[dependencies.tokio]
version = "1.39.2"
features = ["full"]
